[gd_scene load_steps=9 format=3 uid="uid://1shmaegf7hpi"]

[ext_resource type="Script" path="res://scripts/pirate_ship.gd" id="1_b5kj2"]
[ext_resource type="PackedScene" uid="uid://08gpb37be8u2" path="res://scenes/pirate_cannonball.tscn" id="2_3vx8l"]
[ext_resource type="AudioStream" uid="uid://bvfr7cujpaexu" path="res://sound_effects/Enemy Hit.mp3" id="4_7t31b"]
[ext_resource type="Texture2D" uid="uid://bnp5jikd4g55f" path="res://art/pixel ship enemy one.png" id="4_oy2tb"]
[ext_resource type="Texture2D" uid="uid://dveblrf7s8gtk" path="res://art/pixel ship enemy 2.png" id="5_fq4m5"]
[ext_resource type="AudioStream" uid="uid://cdctmma27e4lr" path="res://sound_effects/Cannon Fire.mp3" id="5_i1d33"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t15w2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_oy2tb")
}, {
"duration": 1.0,
"texture": ExtResource("5_fq4m5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wtx8b"]

[node name="PirateShip" type="Area2D"]
collision_layer = 13
collision_mask = 13
script = ExtResource("1_b5kj2")
projectile = ExtResource("2_3vx8l")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0.999985)
rotation = -1.57216
scale = Vector2(0.104433, 0.0955448)
sprite_frames = SubResource("SpriteFrames_t15w2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(1.18725, 1.33574)
shape = SubResource("CapsuleShape2D_wtx8b")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ProjectileTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PirateHitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7t31b")
volume_db = -1.0

[node name="PirateShotAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_i1d33")
volume_db = -15.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_projectile_timer_timeout"]
